--- a/simple.html
+++ b/simple.html
@@ -14,11 +14,11 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Adding copyright
+			Adding copyright new
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Company 2014</p>
+		<p>&copy; Accenture 2019</p>
 	</footer>
 </body>
 </html>
