--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>A very respectful website adding comments</title>
+	<title>A very respectful website adding comments conflict changes</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
@@ -14,7 +14,7 @@
 	<main class="container">
 	<!-- Content Goes Here -->
 		<p>
-			Adding copyright new
+			Adding copyright new all over
 		</p>
 	</main>
 	<footer class="container">
