ahead of github

--- a/simple.html
+++ b/simple.html
@@ -18,7 +18,7 @@
 		</p>
 	</main>
 	<footer class="container">
-		<p>&copy; Accenture 2019</p>
+		<p>&copy; Accenture 2019 changes only changes</p>
 	</footer>
 </body>
 </html>
